Traduction french page 500

--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>Nous sommes désolés, mais une erreur s'est produite (500).</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
     .page-500 {
@@ -33,10 +33,9 @@
 <body class="page-500">
       <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
+    <div>Nous sommes désolés, mais une erreur s'est produite (500)..</h1>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>Si vous êtes le propriétaire de l'application, consultez les logs pour plus d'informations.</p>
   </div>
   <svg xmlns="http://www.w3.org/2000/svg" width="1226.887px" height="908px" viewBox="0 0 1226.887 908">
   <g id="water">
