Traduction en français des pages d'erreurs

--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>La page que vous recherchez n'existe pas (404).</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
     .page-404 {
@@ -33,10 +33,10 @@
 <body class="page-404">
     <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <h1>La page que vous recherchez n'existe pas.</h1>
+      <p>Vous avez peut-être mal saisi l'adresse ou la page a peut-être été déplacée.</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>Si vous êtes le propriétaire de l'application, consultez les journaux pour plus d'informations.</p>
   </div>
 <svg xmlns="http://www.w3.org/2000/svg" width="1226.887px" height="908px" viewBox="0 0 1226.887 908">
 <g id="water">
