--- a/public/500.html
+++ b/public/500.html
@@ -33,7 +33,7 @@
 <body class="page-500">
       <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <div>Nous sommes désolés, mais une erreur s'est produite (500)..</h1>
+    <div>Nous sommes désolés, mais une erreur s'est produite.</h1>
     </div>
     <p>Si vous êtes le propriétaire de l'application, consultez les logs pour plus d'informations.</p>
   </div>
