--- a/public/422.html
+++ b/public/422.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The change you wanted was rejected (422)</title>
+  <title>La modification que vous souhaitiez apporter a été rejetée (422).</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
     .page-422 {
@@ -33,10 +33,10 @@
 <body class="page-422">
      <div class="dialog">
     <div>
-      <h1>The change you wanted was rejected.</h1>
-      <p>Maybe you tried to change something you didn't have access to.</p>
+      <h1>La modification que vous souhaitiez apporter a été rejetée.</h1>
+      <p>Vous avez peut-être essayé de modifier quelque chose auquel vous n'aviez pas accès.</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>Si vous êtes le propriétaire de l'application, consultez les journaux pour plus d'informations.</p>
   </div>
 <svg xmlns="http://www.w3.org/2000/svg" width="1226.887px" height="908px" viewBox="0 0 1226.887 908">
 <g id="water">
