Traduction en français des pages d'erreurs

--- a/public/500.html
+++ b/public/500.html
@@ -33,9 +33,10 @@
 <body class="page-500">
       <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <div>Nous sommes désolés, mais une erreur s'est produite.</h1>
+    <div>
+      <h1> sommes désolés, mais une erreur s'est produite.</h1>
     </div>
-    <p>Si vous êtes le propriétaire de l'application, consultez les logs pour plus d'informations.</p>
+    <p>ISi vous êtes le propriétaire de l'application, consultez les journaux pour plus d'informations.</p>
   </div>
   <svg xmlns="http://www.w3.org/2000/svg" width="1226.887px" height="908px" viewBox="0 0 1226.887 908">
   <g id="water">
